--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -1,91 +1,432 @@
 #app {
-  font-family: 'Roboto', sans-serif;;
+  font-family: "Roboto", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-align: center;
   color: #fff;
   margin-top: 49px;
-    padding: 10px 25px;
+  padding: 10px 25px;
 }
-body{
-	background:#000;
+body {
+  background: #000;
 }
-@media (max-width:600px){
-	.row{
-		width:auto;
-		text-align:center;
-		margin:0 auto;
-	}
-	.w-30{
-		width:100;
-		text-align:right;
-	}
-	.w-70{
-		width:100%;
-		text-align:right;
-	}
+.cutom-class-nav {
+  position: fixed;
+  background: #000;
+  z-index: 200000;
+  width: 100%;
+  margin: 0 !important;
+  padding: 0;
+  top: -3px;
 }
-@media (min-width:1120px){
-	.logo-text{
-		position: relative;
-		left: -67px;
-	}
+#app,
+main {
+  padding: 0 !important;
+  margin-top: 0 !important;
 }
-@media (max-width:767px){
-	.row{
-		width:auto;
-		text-align:center;
-		margin:0 auto;
-		padding-bottom:30px;
-	}
-	.w-30{
-		width:100%;
-		text-align:left;
-	}
-	.w-70{
-		width:100%;
-		text-align:left;
-	}
-	.search-field{
-		position: relative;
-		top: -5px;
-	}
+.navbar-brand {
+  /* padding: 20px 10px !important;*/
 }
-@media (min-width:768px) (max-width:900px){
-	.row{
-		width:auto;
-		text-align:center;
-		margin:0 auto;
-		padding-bottom:30px;
-	}
-	.w-30{
-		width:100%;
-		text-align:left;
-	}
-	.w-70{
-		width:100%;
-		text-align:left !important;
-	}
-	.search-field{
-		position: relative;
-		top: -5px;
-	}
+.search-field {
+  background: transparent;
+  border: 0;
+  border-bottom: 2px solid #ffff;
+  width: 277px;
+  position: relative;
+  top: 8px;
+  outline: none;
+  color: #fff;
+  font-size: 15px;
 }
-@media(min-width:1120px){
-	.row{
-		width:1120px;
-		text-align:center;
-		margin:0 auto;
-	}
-	.w-30{
-		width:30%;
-		float:left;
-		text-align:left;
-	}
-	.w-70{
-		width:70%;
-		float:left;
-		text-align:right;
-	}
+a.nav-link.js-scroll-trigger.router-link-exact-active.router-link-active {
+  color: white;
+}
+#sideNav {
+  transition: all 100ms ease;
+}
+.navbar-dark .navbar-toggler {
+  border-color: transparent;
+}
+@media only screen and (max-width: 991px) {
+  .elevated {
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14),
+      0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
+  }
+  #mainMenu {
+    transition: all 200ms ease;
+    -webkit-transition: all 200ms ease;
+    max-height: 360px;
+  }
+  .menu {
+    height: 0;
+    visibility: hidden;
+    opacity: 0;
+  }
+  .menu-active {
+    height: 100%;
+    visibility: visible;
+    opacity: 1;
+  }
+}
+@media (min-width: 1120px) {
+  .logo-text {
+    position: relative;
+    left: -98px;
+  }
+}
+@media (max-width: 767px) {
+  .row {
+    width: auto;
+    text-align: center;
+    margin: 0 auto;
+    padding-bottom: 30px;
+  }
+  .w-30 {
+    width: 100%;
+    text-align: left;
+  }
+  .w-70 {
+    width: 100%;
+    text-align: left;
+  }
+  .search-field {
+    position: relative;
+    top: -5px;
+  }
 }
 
+@media (min-width: 768px) and (max-width: 900px) {
+  .row {
+    width: auto;
+    text-align: center;
+    margin: 0 auto;
+    padding-bottom: 30px;
+  }
+  .w-30 {
+    width: 100%;
+    text-align: center;
+  }
+  .w-70 {
+    width: 100%;
+    text-align: left !important;
+  }
+  .search-field {
+    position: relative;
+    top: -5px;
+  }
+  .show-details p {
+    margin-bottom: 4px;
+    position: relative;
+    top: 59px;
+    left: 14px;
+  }
+  .show-details {
+    margin-top: 131px;
+  }
+  .vertical .header {
+    margin-top: 117px;
+  }
+  p {
+    display: inline-block;
+  }
+  .search-view {
+		padding-top: 33px !important;
+  }
+}
+.image {
+  background-position: center !important;
+  background-size: cover !important;
+  background-repeat: no-repeat !important;
+  position: relative;
+  width: 160px;
+  margin: 8px 10px;
+  height: 227px;
+}
+.horizontal .content {
+  margin-top: 6px;
+  height: 10px;
+}
+.horizontal .content h6 {
+  font-size: 14px;
+  text-transform: capitalize;
+  line-height: 14px;
+  margin-bottom: 6px;
+  text-align: left;
+  padding: 0 10px;
+  margin-top: 10px;
+  color: #fff;
+}
+.horizontal .content p {
+  line-height: 1.5;
+  font-size: 12px;
+  margin-top: 8px;
+  margin-left: 10px;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  position: relative;
+  top: -265px;
+  background: #c31e1e;
+  color: #fff;
+  padding: 8px 7px;
+  border-bottom-right-radius: 10px;
+  display: inline-block;
+  left: -70px;
+}
+.content span {
+  color: #fff;
+  font-size: 12px;
+  float: left;
+  margin-left: 10px;
+  border: 1px solid red;
+  padding: 2px 10px;
+  border-radius: 2px;
+}
+a {
+  text-decoration: none;
+  color: #fff;
+}
+@media (max-width: 600px) {
+  .row {
+    width: auto;
+    text-align: center;
+    margin: 0 auto;
+  }
+  .w-40 {
+    width: 100 important;
+    text-align: right;
+  }
+  .w-60 {
+    width: 100% !important;
+    text-align: right;
+  }
+  .logo-text {
+    text-align: left;
+  }
+}
+.primary-clr {
+  color: #c31e1e;
+}
+.w-40 {
+  width: 40%;
+  float: left;
+  text-align: left;
+}
+.w-60 {
+  width: 60%;
+  float: left;
+  text-align: right;
+}
+.show-details img {
+  height: 400px;
+  padding: 10px 20px;
+  text-align: right;
+}
+.show-details h6 {
+  font-size: 20px;
+  margin-top: 40px;
+  margin-bottom: 4px;
+}
+.show-details p {
+  margin-bottom: 4px;
+}
+
+.show-details .content {
+  text-align: left;
+}
+.m-t-20 {
+  margin-top: 20px;
+}
+.m-t-100 {
+  margin-top: 100px;
+}
+@media (max-width: 600px) {
+  .row {
+    width: auto;
+    text-align: center;
+    margin: 0 auto;
+  }
+  .w-40 {
+    width: 100%;
+    text-align: center;
+  }
+  .w-70 {
+    width: 100%;
+    text-align: center;
+  }
+}
+@media (max-width: 767px) {
+  .row {
+    width: auto;
+    text-align: center;
+    margin: 0 auto;
+    padding-bottom: 30px;
+  }
+  .w-30 {
+    width: 100%;
+    text-align: center;
+  }
+  .w-70 {
+    width: 100%;
+    text-align: center;
+  }
+  .search-field {
+    position: relative;
+    top: -5px;
+  }
+  .show-details .content {
+    position: relative;
+    top: 228px;
+  }
+}
+@media (min-width: 768px) (max-width: 900px) {
+  .row {
+    width: auto;
+    text-align: center;
+    margin: 0 auto;
+    padding-bottom: 30px;
+  }
+  .w-30 {
+    width: 100%;
+    text-align: left;
+  }
+  .w-70 {
+    width: 100%;
+    text-align: left !important;
+  }
+  .search-field {
+    position: relative;
+    top: -5px;
+  }
+  .show-details .content {
+    position: relative;
+    top: 228px;
+  }
+  .show-details {
+    margin-top: 131px;
+    padding: 10px 19px;
+  }
+  .logo-text {
+    position: relative;
+    left: -83px;
+  }
+}
+@media (min-width: 1120px) {
+  .row {
+    width: 1120px;
+    margin: 0 auto;
+  }
+  .w-30 {
+    width: 30%;
+    float: left;
+  }
+  .w-70 {
+    width: 70%;
+    float: left;
+    text-align: right;
+  }
+  .show-details {
+    margin-top: 140px !important;
+  }
+  .navbar-brand {
+    margin-top: 10px;
+    padding: 10px 16px;
+  }
+  .vertical {
+    position: relative;
+    top: 33px;
+  }
+  .error-view {
+	margin-top:125px;
+  }
+  .search-view {
+		padding-top: 33px !important;
+	}
+}
+.header {
+  margin-bottom: 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-left: 8px;
+}
+@media (max-width: 650px) {
+  .vertical .header {
+    margin-top: 105px !important;
+  }
+  .error-view {
+    position: relative;
+    top: 100px;
+  }
+}
+@media (min-width: 1440px) {
+  .navbar-brand {
+    width: 1190px !important;
+    text-align: center;
+    margin: 0 auto;
+  }
+  .logo-text {
+    position: relative;
+    left: -160px;
+  }
+}
+nav {
+  display: flex;
+  align-items: center;
+}
+svg {
+  width: 18px;
+  height: 18px;
+  fill: currentColor;
+  color: black;
+}
+button {
+  padding: 0 0;
+  opacity: 0.5;
+}
+button:focus {
+  outline: none;
+}
+.horizontal {
+  --count: 2;
+  --gap: 16px;
+}
+@media (min-width: 640px) {
+  .horizontal {
+    --count: 3;
+    --gap: 24px;
+  }
+}
+@media (min-width: 768px) {
+  .horizontal {
+    --count: 4;
+  }
+}
+@media (min-width: 1024px) {
+  .horizontal {
+    --count: 5;
+  }
+}
+@media (min-width: 1280px) {
+  .horizontal {
+    --count: 6;
+  }
+  .horizontal,
+  .header {
+    width: 1190px !important;
+    text-align: center;
+    margin: 0 auto;
+  }
+}
+.item {
+  width: calc((100% - ((var(--count) - 1) * var(--gap))) / var(--count));
+  margin-right: var(--gap);
+}
+button.inactive svg {
+  color: #bbb;
+  opacity: 0.5;
+}
+.m-t-40 {
+  margin-top: 50px;
+}
